CIの失敗に伴う対応 (#33)
* test: Nablarch 6での挙動を確認するテスト追加

* fix: Nablarch 6の挙動に準拠するように修正

* test: 既存動作確認テストの修正・追加

* fix: レコード関連テストの追加および機能の修正

* レビュー指摘対応